# services/api/src/main/kotlin/com/hatcast/api/troupe/TroupeBaselineRole.kt
@@ -1,0 +1,6 @@
+package com.hatcast.api.troupe
+
+enum class TroupeBaselineRole {
+    MEMBER,
+    TROUPE_ADMIN,
+}
